# Wyrradia

./: .gitignore  README.md  build_server.sh  run_server.sh
client/html/: index.html
client/html/js/: Commands.js  Main.js
server/: .clang-format  CMakeLists.txt
server/src/: main.cpp
server/src/API/: API.cpp  API.hpp
server/src/Common/: Singleton.hpp
server/src/Core/: Server.cpp  Server.hpp
server/src/Server/: Server.cpp  Server.hpp
server/src/Server/Session/: Session.cpp  Session.hpp
server/src/Server/Session/Core/Engine/: Engine.cpp  Engine.hpp
server/src/Server/Session/Core/Graphics/: Graphics.cpp  Graphics.hpp
server/src/StdAfx/: StdAfx.hpp
server/src/Theme0/: RunNewTheme0.cpp  RunNewTheme0.hpp
